@@ -52,14 +52,14 @@ HML_FwLib_STC90
 ### configuration
 There are several parameters need to be configured by user manually.
 #### \_\_CONF\_COMPILE\_xxx (for conditional compilation)
-In order to ensure the projects based on HML_FwLib_STC90 can be downloaded into the limited on-chip flash space of STC90 MCUs, the developers can modify the macro definition named `__CONF_COMPILE_xxx` in *conf.h* to specify which piece of codewill take part in compilation, then it will reduce size of final .hex file. If user only use GPIO module, then user just need to enable `__CONF_COMPILE_GPIO` macro in *conf.h*. Some macros for conditional compilation rely on others. For example, before you define the macro definition `__CONF_COMPILE_UART`, the macro `__CONF_COMPILE_TIM` and `__CONF_COMPILE_TIM2` should be defined, otherwise the compilation would be failed.
+In order to ensure the projects based on HML_FwLib_STC90 can be downloaded into the limited on-chip flash space of STC90 MCUs, the developers can modify the macro definition named `__CONF_COMPILE_xxx` in *conf.h* to specify which piece of code will take part in compilation, then it will reduce size of final .hex file. If user only use GPIO module, then user just need to enable `__CONF_COMPILE_GPIO` macro in *conf.h*. Some macros for conditional compilation rely on others. For example, before you define the macro definition `__CONF_COMPILE_UART`, the macro `__CONF_COMPILE_TIM` and `__CONF_COMPILE_TIM2` should be enabled at the same time, otherwise the compilation would be failed.
 ####  \_\_CONF\_FRE\_CLKIN
 The macro mark frequency of clock source, including extern crystal oscillator or internal RC oscillating circuit, and it's defined in *conf.h*.
 #### \_\_CONF\_MCU\_MODEL
 The macro mark the model of target MCU and is defined in *conf.h*.
 
 ### code & compile
-There is a source file named *test.c* under *usr* directory, we have put a main function here. User can add and modify own code here, then enter <kbd>make</kbd> in terminal, the Makefile will work and complete compilation. From version V0R3, you can enter <kbd>make help</kbd> to get all usages, and former version makefile only support <kbd>make</kbd>, <kbd>make clean</kbd>, <kbd>make mostlyclean</kbd>(change into <kbd>make distclean</kbd> now)
+There is a source file named *test.c* under *usr* directory, we have put a main function here. User can add and modify own code here, then enter <kbd>make MCU=&lt;mcu&gt;</kbd> in terminal, the Makefile will work and complete compilation. From version V0R3, you can enter <kbd>make help</kbd> to get all usages, and former version makefile only support <kbd>make</kbd>, <kbd>make clean</kbd>, <kbd>make mostlyclean</kbd>(change into <kbd>make distclean</kbd> now)
 
 Certainly, you can just add *inc* and *src* directory into your project structure, and write your own makefile to build a custom project. 
 
