@@ -1,13 +1,14 @@
+#!/usr/bin/make
+
 ##################################################
-# Author     : Weilun Fong | wlf(at)zhishan-iot.tk
-# Date       : 2020-01-04
+# Author     : Weilun Fong | wlf@zhishan-iot.tk
+# Date       : 2020-01-28
 # Description: Makefile for HML_FwLib_STC90, it will generate a hex format file finally
 # E-mail     : mcu@zhishan-iot.tk
 # Make-tool  : GNU Make (http://www.gnu.org/software/make/manual/make.html)
 # Page       : https://hw.zhishan-iot.tk/page/hml/detail/fwlib_stc90.html
 # Tar-mcu    : STC90C53RC, belong to STC micro STC90 series
-# Tar-project: HML_FwLib_STC90
-# Version    : v0.2.6
+# Version    : v0.3.0
 ##################################################
 
 ########################################
@@ -15,6 +16,7 @@
 ########################################
 ##### shell
 export SHELL       := /bin/bash
+export AWK         := awk
 export BASENAME    := basename
 export CAT         := cat
 export CD          := cd
@@ -23,12 +25,17 @@ export EECHO       := $(ECHO) -e
 export GREP        := grep
 export LS          := ls
 export RM          := rm -f
+export TR          := tr
 export XARGS       := xargs
 ##### tool-chain
 AR                 := sdar
 CC                 := sdcc
 MAKE               := make --no-print-directory
 PACKIHX            := packihx
+#### special phony
+PHONY_LIST_IN      := clean distclean help rebuild version
+#### print
+SPACE              := $(empty) $(empty)
 
 ########################################
 ##### [1]PATH & TARGET DEFINE
@@ -44,57 +51,62 @@ HML_SRC_FILES      := $(wildcard $(DIR_SRC)/*.c)
 HML_REL_FILES      := $(patsubst $(DIR_SRC)/%.c, $(DIR_OUTPUT)/%.rel, $(HML_SRC_FILES))
 MYFILE             ?= test.c
     # file check
-    PHONY_LIST_IN := distclean help version
     ifeq ($(findstring $(MAKECMDGOALS),$(PHONY_LIST_IN)),)
         ifneq ($(wildcard $(MYFILE)),$(MYFILE))
             $(error no such file $(CURDIR)/$(MYFILE))
         endif
     endif
 MYFILE_NAME        := $(shell $(BASENAME) $(MYFILE) .c)
-MYFILE_REL         := $(patsubst %.c, $(DIR_OUTPUT)/%.rel, $(MYFILE))
+MYFILE_REL         := $(DIR_OUTPUT)/$(MYFILE_NAME).rel
 ###### target
 TARGET             := output
 TARGET_FWLIB       := $(DIR_OUTPUT)/$(FILE_HML_FWLIB)
 ###### compile parameter
-AFLAGS_HML         := -rcs
-CFLAGS_HML         := -c -I$(DIR_INC) -mmcs51 --opt-code-size --std-sdcc99 --code-loc 0x0000 --code-size 0x1FFF --data-loc 0x00
-CFLAGS             := -c -I$(DIR_INC) -mmcs51 --opt-code-size --std-sdcc99 -L$(DIR_OUTPUT) -lhml_stc90 --code-loc 0x0000 --code-size 0x1FFF --data-loc 0x00
+AFLAGS             := -rcs
 
 ########################################
 ##### [2]BUILD WORKS
 ########################################
 ##### all target
-all: $(TARGET).hex
-	@echo ===================================================
-	@echo Make $(MAKECMDGOALS) done!
-	@echo ---------------------------------------------------
-	@echo completed at `date "+%Y-%m-%d %H:%M:%S"`
-	@echo ===================================================
+all: $(DIR_OUTPUT)/$(TARGET).hex
+	@$(ECHO) ===================================================
+	@$(ECHO) Make $(MAKECMDGOALS) done!
+	@$(ECHO) ---------------------------------------------------
+	@$(ECHO) completed at `date "+%Y-%m-%d %H:%M:%S"`
+	@$(ECHO) ===================================================
+########################################
+##### MCU configuration
+hml_cfiles: mcu
+	@$(EECHO) "\033[36m - Start to build!\033[0m"
+########################################
+##### C files target
+$(HML_SRC_FILES): hml_cfiles
 ########################################
 ###### compile HML source file(*.c)
 $(HML_REL_FILES): $(DIR_OUTPUT)/%.rel:$(DIR_SRC)/%.c
 	@$(ECHO) "CC  $<"
-	@$(CC) $< $(CFLAGS_HML) -o $@
+	@$(CC) $< $(CFLAGS) -o $@
 ########################################
 ##### generate static library
 $(TARGET_FWLIB): $(HML_REL_FILES)
 	@$(EECHO) "\033[36m - Make static link library `basename $@` \033[0m"
 	@$(ECHO) "AR  $@"
-	@$(AR) $(AFLAGS_HML) $@ $^
+	@$(AR) $(AFLAGS) $@ $^
 ########################################
 #### compile source file of user
 $(MYFILE_REL): $(MYFILE) $(TARGET_FWLIB)
 	@$(EECHO) "\033[36m - Compile user source code \033[0m"
 	@$(ECHO) "CC  $<"
-	@$(CC) $< $(CFLAGS) -o $(DIR_OUTPUT)/`$(BASENAME) $@`
+	@$(CC) $< $(CFLAGS) -L$(DIR_OUTPUT) -lhml_stc89 -o $(DIR_OUTPUT)/`$(BASENAME) $@`
 ########################################
 ##### generate .hex file
-$(TARGET).ihx: $(MYFILE_REL)
+$(DIR_OUTPUT)/$(TARGET).ihx: $(MYFILE_REL)
 	@$(EECHO) "\033[36m - Generate .ihx file \033[0m"
-	@$(CD) $(DIR_OUTPUT) && $(CC) `$(BASENAME) $^` $(FILE_HML_FWLIB) -o $@
-$(TARGET).hex: $(TARGET).ihx
+	@$(ECHO) "CC $@"
+	@$(CC) $^ $(DIR_OUTPUT)/$(FILE_HML_FWLIB) -o $@
+$(DIR_OUTPUT)/$(TARGET).hex: $(DIR_OUTPUT)/$(TARGET).ihx
 	@$(EECHO) "\033[36m - Generate .hex file \033[0m"
-	@$(CD) $(DIR_OUTPUT) && $(PACKIHX) $< > $@
+	@`$(PACKIHX) $< > $@`
 
 ########################################
 ##### [+]PHONY TARGET
@@ -114,18 +126,23 @@ help:
 ##### library
 .PHONY: library
 library: $(TARGET_FWLIB)
-	@echo ===================================================
-	@echo Make $(MAKECMDGOALS) done!
-	@echo ---------------------------------------------------
-	@echo completed at `date "+%Y-%m-%d %H:%M:%S"`
-	@echo ===================================================
+	@$(ECHO) ===================================================
+	@$(ECHO) Make $(MAKECMDGOALS) done!
+	@$(ECHO) ---------------------------------------------------
+	@$(ECHO) completed at `date "+%Y-%m-%d %H:%M:%S"`
+	@$(ECHO) ===================================================
+##### mcu configuration
+.PHONY: mcu
+mcu:
+    ifeq ($(findstring $(MAKECMDGOALS), $(PHONY_LIST_IN)),)
+        include Makefile.mcu
+    endif
 ##### rebuild
 .PHONY: rebuild
 rebuild:
 	@$(EECHO) "\033[36m - Clean all middle or temporary files \033[0m"
 	@$(MAKE) distclean
-	@$(EECHO) "\033[36m - Start to build... \033[0m"
-	@$(MAKE) -f Makefile -j$(JOBS) MAKECMDGOALS=$(MAKECMDGOALS)
+	@$(MAKE) -f Makefile -j$(JOBS) $(MAKEFLAGS)
 ##### version
 .PHONY: version
 version:
