@@ -58,5 +58,8 @@
  Note    : (1)update Makefile to v0.2.6
              - support <library> target, user can get usage via <make help>
              - optimize <make version> function
+              update Makefile to v0.3.0
+             - optimize information print
+             - support variable MCU, CODE, XRAM
            (2)refactor version.h
            (3)optimize macro for compile select
